# MS-Viewer

./: .gitignore  README.md
exe/: msReader  msReader-n  msReader_3_26  msReaderb
notes/: learn_notes.docx  ~$arn_notes.docx
src/: delete.html  package-lock.json  server.js
src/2D/: index.html  server.js
src/2D/css/: progress.css  spectrumview.css
src/2D/js/: buttons.js  dataAccess.js  dataControls.js  files.js  sp2d.js  spectrum.js  spectrumPoints.js
src/3D/: index.html  server.js
src/3D/css/: graphview.css  instructions.css
src/3D/js/: buttons.js  dataAccess.js  dataControls.js  graph.js  graphpoints.js  legend.js
src/dbreader/: databaseReader.cpp  msReader.cpp  msReader.hpp  mzMLReader.cpp  mzMLReader.hpp
src/project/: index.html  index_old.html  server.js
src/project/data/: SCAN1145.mgf  scan1144
src/project_ms1_2/: index.html  msReader  server.js
src/project_ms1_2/data/: SCAN1145_annotation.ann  SCAN1145_centroid.mgf  prsm23 (1).html
src/pwiz-src-without-v-3_0_11748/: Jamroot.jam
src/pwiz-src-without-v-3_0_11748/libraries/: boost_1_56_0.tar.bz2
src/pwiz-src-without-v-3_0_11748/pwiz/: configure.scan
src/test/d3/read_file/: read_demo1.html  read_demo2.html  (+7 more)
src/test/node/: buffer.js  eventEmitter.js  get.js  index1.js  js-mzml.js  maml.js  package-lock.json  package.json  process.js  setTimeout.js
src/test/plotly/: test1.html  test2.html
src/test/read_file/cpp/mzml_reader/: CMakeLists.txt
src/test/read_file/cpp/mzml_reader/src/: spec_list_mzml.cpp
src/test/read_file/cpp/mzml_reader/src/msdata/: Test.cpp
src/test/read_file/cpp/mzml_reader/src/reader/: spec_list_mzml.cpp
src/test/read_file/cpp/mzml_reader/src/test/: spec_list_mzml.cpp
src/test/simple_demo/: demo1_MakeChart.html  demo2_UseScaleInChart.html  demo7_exit.html  demo8_interaction.html
src/test/spectrum/: Simole_spectrum.html
(+115 files in other folders)
